# synthetic-retail-mlops-pipeline

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataset_schema_summary.csv  docker-compose.yml  project_code_minhazur.py  pyproject.toml  requirements-dev.txt  requirements-monitoring.txt  requirements.txt  simulated_dataset_generator_minhazur.py
.github/workflows/: ci.yml  deploy.yml
configs/: config.yaml
docker/: entrypoint.sh
docs/: CASE_STUDY.md  DEPLOYMENT.md
monitoring/: README.md  docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/dashboards/: retail-forecasting.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/retail_forecasting/: __init__.py  config.py  exceptions.py  features.py  logging_config.py  train.py
src/retail_forecasting/api/: __init__.py  main.py  ui.py
src/retail_forecasting/app/: __init__.py  streamlit_app.py
src/retail_forecasting/data/: generate.py
src/retail_forecasting/monitoring/: __init__.py  drift.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
tests/: conftest.py  test_api.py  test_features.py  test_generate.py  test_monitoring.py  test_train.py
