[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-forecasting"
version = "0.1.0"
description = "Production MLOps pipeline for real-time retail demand forecasting on synthetic data."
authors = [{ name = "Md Minhazur Rahman", email = "minhazurrahman.ds@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff: linting + import sorting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]  # line length handled by black

# ---------------------------------------------------------------------------
# Black: formatting
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# mypy: static typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = []

# Legacy Streamlit prototype: kept for the live demo but slated for retirement
# in favour of the typed FastAPI service (see Roadmap). It predates the strict
# typing standard, so it is excluded from mypy rather than retro-typed; all
# production modules remain fully type-checked.
[[tool.mypy.overrides]]
module = "retail_forecasting.app.streamlit_app"
ignore_errors = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=retail_forecasting --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
